--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
+	<link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" />
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -19,6 +20,7 @@
 		</div>
 		<div class="containerProjetos">
 			<h2>Meus Projetos</h2>
+
 			<div class="apresentacao">
 				<div id="wallet" class="brWallet">
 					<img src="assets/projectWalletHome.png">
@@ -33,6 +35,37 @@
 	</div>
 	<p class="embbed" onclick="github()"><img src="https://img.shields.io/static/v1?label=GitHub&message=@dev.rik3&color=<COLOR>&style=<STYLE>&logo=<LOGO>">
 	</p>
+
+	<footer>
+		<div class="containerFooter">
+			<div class="linksUteis">
+				<h2>Links Ùteis</h2>
+				<ul>
+					<li>
+						<a href="https://githuub.com/devrik3">GitHub</a>
+					</li>
+					<li>
+						<a href="https://githuub.com/devrik3/">Repositorio GitHub</a>
+					</li>
+					<li>
+						<a href="https://">Workana</a>
+					</li>
+				</ul>
+			</div>
+			<div class="contato">
+				<h2>Contato</h2>
+				<ul>
+					<li>
+						<a href="mailto:henriquedevop@gmail.com?subject=(subject)">E-Mail</a>
+					</li>
+
+					<li>
+						<a href="https://instagram.com/dev.rik3">Instrgram</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</footer>
 <script src="js/redirect.js"></script>
 </body>
 </html>
